      (Fixes: #258).
    - Replace qCritical() with printError() by argument parsing.
    - Update translation files.
    - Update russian translation.
    - Update string "&Clipboard Mode" and translate in russian translation file.
    - Grammar fix in russian translation.
    - Fix "fullscreen" mode on Windows 7 with multiple monitors.

  [ Mike DePaulo ]
  * New upstream release (4.0.2.1):
    - Windows: Install VcXsrv "misc" fonts by default, and make all 4 font
      groups optional: misc, 75dpi, 100dpi and others (Fixes: #108)
      Note: The fact that all the fonts are included makes the installer about
      30MB larger. (See next comment, it would be even larger.)
    - Windows: Reduce the new size of NSIS installer by several MB
      by switching to lzma solid compression
    - Windows: Make the desktop shortcut optional during install,
      but still the default.
    - Windows: Prevent high PulseAudio CPU usage on Windows XP by lowering
      PulseAudio's CPU priority from "high" to "normal" on XP specifically.
      Also do so on Windows Server 2003 (R2) (Fixes #526)
    - Windows: Enable PulseAudio log when --debug is passed.
    - Windows: Fix compatibility with current PulseAudio master branch
    - Windows: cygwin packages (inluding patched OpenSSH 6.6.1p1-3) updated from
      latest versions as of 2014-04-08 to latest versions as of 2014-06-09. This
      includes openssl 1.0.1h-1, which fixes the 6 CVEs announced on 2014-06-05.
      (Cygwin openssl was also individually updated to 1.0.1h-1 in
      4.0.2.0+build4.) This also includes migrating from libjpeg to
      libjpeg-turbo, which reduces CPU usage of nxproxy.)
    - Windows: Download and compile nx-libs-lite from the release tarball,
      rather than from git, so that the patches are actually applied
    - Windows: nx-libs-lite updated from 3.5.0.22 to 3.5.0.27
      (linked against aforementioned cygwin package versions)