@@ -1,0 +1,14 @@
+######################################################################
+# Automatically generated by qmake (2.01a) Di. Jul 8 10:58:26 2014
+######################################################################
+
+TEMPLATE = app
+TARGET = 
+DEPENDPATH += .
+INCLUDEPATH += .
+
+# Input
+SOURCES += x2gohelper.cpp
+QT -= gui
+CONFIG += static release
+#CONFIG += console
