@@ -53,6 +53,8 @@ x2goclient (4.0.2.1-0x2go1) UNRELEASED; urgency=low
     - Update string "&Clipboard Mode" and translate in russian translation file.
     - Grammar fix in russian translation.
     - Fix "fullscreen" mode on Windows 7 with multiple monitors.
+    - Add x2gohelper to start X2Go Client on Windows and clean child processes if
+      X2Go Client crashes.
 
   [ Mike DePaulo ]
   * New upstream release (4.0.2.1):
